--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img class="capa" src="/São Cipriano.png" alt="Capa do Livro">
+        <img class="capa" src="São Cipriano.png" alt="Capa do Livro">
         <div>
             <h1>São Cipriano</h1>
             <h3>O Bruxo</h3>
@@ -115,5 +115,6 @@
         <p>&copy; 2025 Todos os direitos reservados.</p>
     </footer>
 </body>
+
 
 </html>
