--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </section>
 
         <section id="critica">
-            <h2>📝 Crítica Especializada</h2>
+            <h2>Crítica Especializada</h2>
             <p>
                 O <strong>Livro de São Cipriano</strong> é uma obra que ocupa um espaço curioso entre a literatura
                 religiosa e o ocultismo popular. Envolto em mistério desde sua origem, ele reúne feitiços, orações,
@@ -118,3 +118,4 @@
 
 
 </html>
+
