--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>São Cipriano</title>
+    <title>São Cipriano: O Bruxo</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header>
-        <img class="capa" src="São Cipriano.png" alt="Capa do Livro">
+        <img class="capa" src="sc.png" alt="Capa do Livro">
         <div>
             <h1>São Cipriano</h1>
             <h3>O Bruxo</h3>
@@ -115,7 +113,4 @@
         <p>&copy; 2025 Todos os direitos reservados.</p>
     </footer>
 </body>
-
-
 </html>
-
